set up terraform support in vim

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -77,6 +77,13 @@
       "args": ["start"],
       "filetypes": ["sh"],
       "ignoredRootPaths": ["~"]
+    },
+    "terraform": {
+      "command": "terraform-ls",
+      "args": ["serve"],
+      "filetypes": ["terraform", "tf"],
+      "initializationOptions": {},
+      "settings": {}
     }
   },
   "coc.source.buffer.enable": true,
