fix yaml schema

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -15,9 +15,13 @@
   "yaml.completion": true,
   "yaml.validate": true,
   "yaml.schemaStore.enable": true,
+  "yaml.schemaStore.url": "https://www.schemastore.org/api/json/catalog.json",
   "yaml.schemas": {
     "cloudformation": "*.template.y*ml",
-    "kubernetes": "*.y*ml"
+    "kustomization": [
+      "kustomization.y*ml",
+      "*.patch.y*ml"
+    ]
   },
   "yaml.customTags": [
     "!Ref",
@@ -39,18 +43,26 @@
     "!Join sequence"
   ],
   "diagnostic-languageserver.formatFiletypes": {
-    "python": ["black"]
+    "python": [
+      "black"
+    ]
   },
   "diagnostic-languageserver.formatters": {
     "black": {
       "command": "black",
-      "args": ["-q", "-"]
+      "args": [
+        "-q",
+        "-"
+      ]
     }
   },
   "languageserver": {
     "clangd": {
       "command": "clangd",
-      "args": ["--background-index", "--fallback-style=google"],
+      "args": [
+        "--background-index",
+        "--fallback-style=google"
+      ],
       "rootPatterns": [
         "compile_flags.txt",
         "compile_commands.json",
@@ -58,31 +70,61 @@
         ".git/",
         ".hg/"
       ],
-      "filetypes": ["c", "cpp", "cc", "c++", "objc", "objcpp"]
+      "filetypes": [
+        "c",
+        "cpp",
+        "cc",
+        "c++",
+        "objc",
+        "objcpp"
+      ]
     },
     "golang": {
       "command": "gopls",
-      "rootPatterns": ["go.work", "go.mod", ".vim/", ".git/", ".hg/"],
-      "filetypes": ["go"],
+      "rootPatterns": [
+        "go.work",
+        "go.mod",
+        ".vim/",
+        ".git/",
+        ".hg/"
+      ],
+      "filetypes": [
+        "go"
+      ],
       "initializationOptions": {
         "usePlaceholders": true
       }
     },
     "dockerfile": {
       "command": "docker-langserver",
-      "filetypes": ["dockerfile"],
-      "args": ["--stdio"]
+      "filetypes": [
+        "dockerfile"
+      ],
+      "args": [
+        "--stdio"
+      ]
     },
     "bash": {
       "command": "bash-language-server",
-      "args": ["start"],
-      "filetypes": ["sh"],
-      "ignoredRootPaths": ["~"]
+      "args": [
+        "start"
+      ],
+      "filetypes": [
+        "sh"
+      ],
+      "ignoredRootPaths": [
+        "~"
+      ]
     },
     "terraform": {
       "command": "terraform-ls",
-      "args": ["serve"],
-      "filetypes": ["terraform", "tf"],
+      "args": [
+        "serve"
+      ],
+      "filetypes": [
+        "terraform",
+        "tf"
+      ],
       "initializationOptions": {},
       "settings": {}
     }
@@ -90,8 +132,12 @@
   "coc.source.buffer.enable": true,
   "coc.source.buffer.priority": 1,
   "coc.preferences.formatOnType": true,
-  "coc.preferences.formatOnTypeFiletypes": ["python"],
-  "coc.preferences.formatOnSaveFiletypes": ["*"],
+  "coc.preferences.formatOnTypeFiletypes": [
+    "python"
+  ],
+  "coc.preferences.formatOnSaveFiletypes": [
+    "*"
+  ],
   "coc.preferences.extensionUpdateCheck": "weekly",
   "coc.preferences.useQuickfixForLocations": true,
   "coc.preferences.maxFileSize": "100MB",
