--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -143,5 +143,7 @@
   "solargraph.formatting": true,
   "solargraph.definitions": true,
   "solargraph.references": true,
-  "solargraph.autoformat": true
+  "solargraph.autoformat": true,
+  "sumneko-lua.enableNvimLuaDev": true,
+  "Lua.telemetry.enable": false
 }
