--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -17,10 +17,7 @@
   "yaml.schemaStore.enable": true,
   "yaml.schemaStore.url": "https://www.schemastore.org/api/json/catalog.json",
   "yaml.schemas": {
-    "kustomization": [
-      "**/kustomization.y*ml",
-      "**/*.patch.y*ml"
-    ]
+    "kustomization": ["**/kustomization.y*ml", "**/*.patch.y*ml"]
   },
   "yaml.customTags": [
     "!Ref",
@@ -42,26 +39,18 @@
     "!Join sequence"
   ],
   "diagnostic-languageserver.formatFiletypes": {
-    "python": [
-      "black"
-    ]
+    "python": ["black"]
   },
   "diagnostic-languageserver.formatters": {
     "black": {
       "command": "black",
-      "args": [
-        "-q",
-        "-"
-      ]
+      "args": ["-q", "-"]
     }
   },
   "languageserver": {
     "clangd": {
       "command": "clangd",
-      "args": [
-        "--background-index",
-        "--fallback-style=google"
-      ],
+      "args": ["--background-index", "--fallback-style=google"],
       "rootPatterns": [
         "compile_flags.txt",
         "compile_commands.json",
@@ -69,81 +58,42 @@
         ".git/",
         ".hg/"
       ],
-      "filetypes": [
-        "c",
-        "cpp",
-        "cc",
-        "c++",
-        "objc",
-        "objcpp"
-      ]
+      "filetypes": ["c", "cpp", "cc", "c++", "objc", "objcpp"]
     },
     "golang": {
       "command": "gopls",
-      "rootPatterns": [
-        "go.work",
-        "go.mod",
-        ".vim/",
-        ".git/",
-        ".hg/"
-      ],
-      "filetypes": [
-        "go"
-      ],
+      "rootPatterns": ["go.work", "go.mod", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["go"],
       "initializationOptions": {
         "usePlaceholders": true
       }
     },
-    "dockerfile": {
-      "command": "docker-langserver",
-      "filetypes": [
-        "dockerfile"
-      ],
-      "args": [
-        "--stdio"
-      ]
-    },
     "bash": {
       "command": "bash-language-server",
-      "args": [
-        "start"
-      ],
-      "filetypes": [
-        "sh"
-      ],
-      "ignoredRootPaths": [
-        "~"
-      ]
+      "args": ["start"],
+      "filetypes": ["sh"],
+      "ignoredRootPaths": ["~"]
     },
     "terraform": {
       "command": "terraform-ls",
-      "args": [
-        "serve"
-      ],
-      "filetypes": [
-        "terraform",
-        "tf"
-      ],
+      "args": ["serve"],
+      "filetypes": ["terraform", "tf"],
       "initializationOptions": {},
       "settings": {}
     }
   },
   "coc.source.buffer.enable": true,
   "coc.source.buffer.priority": 1,
-  "coc.preferences.formatOnType": true,
-  "coc.preferences.formatOnTypeFiletypes": [
-    "python"
-  ],
-  "coc.preferences.formatOnSaveFiletypes": [
-    "*"
-  ],
+  "coc.preferences.formatOnType": false,
+  "[python]": {
+    "coc.preferences.formatOnType": true
+  },
+  "coc.preferences.formatOnSave": true,
+  "[yaml]": {
+    "coc.preferences.formatOnSave": false
+  },
+  "coc.preferences.formatOnSaveTimeout": 500,
   "coc.preferences.extensionUpdateCheck": "weekly",
   "coc.preferences.useQuickfixForLocations": true,
-  "coc.preferences.maxFileSize": "100MB",
-  "solargraph.formatting": true,
-  "solargraph.definitions": true,
-  "solargraph.references": true,
-  "solargraph.autoformat": true,
-  "sumneko-lua.enableNvimLuaDev": true,
-  "Lua.telemetry.enable": false
+  "coc.preferences.maxFileSize": "100MB"
 }
