--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set-option -g default-command zsh
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'jaclu/tmux-menus'
 
 # Configuration
 set -g @themepack 'powerline/block/gray'
