--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -2,9 +2,12 @@
   "java.import.gradle.enabled": true,
   "java.import.maven.enabled": true,
   "java.maven.downloadSources": true,
+  "java.eclipse.downloadSources": true,
+  "java.maxConcurrentBuilds": 1,
+  "java.import.maven.offline.enabled": true,
   "java.configuration.maven.userSettings": "~/.m2/settings.xml",
   "java.codeGeneration.useBlocks": true,
-  "java.configuration.updateBuildConfiguration": "interactive",
+  "java.configuration.updateBuildConfiguration": "automatic",
   "java.autobuild.enabled": false,
   "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
   "java.format.enabled": true,
