--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -1,42 +1,57 @@
+icons_format = "{icon}"
+
+[theme]
 theme = "solarized-dark"
-icons = "awesome"
+
+[icons]
+icons = "awesome4"
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used_percents}"
-format_swap = "{swap_used_percents}"
+format = "$icon $mem_total_used_percents.eng(w:2)"
+format_alt = "$icon_swap $swap_used_percents.eng(w:2)"
+interval = 5
 
 [[block]]
 block = "cpu"
-interval = 1
+interval = 5
 
 [[block]]
 block = "load"
-interval = 1
-format = "{1m}"
+interval = 5
+format = "$icon $1m.eng(w:4)%"
 
 [[block]]
 block = "sound"
+[[block.click]]
+button = "left"
+cmd = "pavucontrol"
 
 [[block]]
-# if_command = "systemctl is-active NetworkManager"
-block = "networkmanager"
-on_click = "xterm -e nmtui"
-interface_name_include = ["eth.*", "wlan.*"]
+block = "net"
+device = "eth.*"
+missing_format = ""
+[[block.click]]
+button = "left"
+cmd = "xterm -e nmtui"
+
+[[block]]
+block = "net"
+device = "wlan.*"
+[[block.click]]
+button = "left"
+cmd = "xterm -e nmtui"
 
 [[block]]
 block = "battery"
-hide_missing = true
-device = "/sys/class/power_supply/BAT1"
+missing_format = ""
 
 [[block]]
-block = "battery"
-hide_missing = true
-device = "/sys/class/power_supply/BAT0"
+block = "notify"
+format = "$icon"
 
 [[block]]
 block = "time"
 interval = 5
-format = "%a %d/%m %R"
+format = "$timestamp.datetime(f:'%a %d/%m %R')"
 
