--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -11,6 +11,9 @@ block = "memory"
 format = "$icon $mem_total_used_percents.eng(w:2)"
 format_alt = "$icon_swap $swap_used_percents.eng(w:2)"
 interval = 5
+[block.theme_overrides]
+idle_bg = { link = "info_bg" }
+idle_fg = { link = "info_fg" }
 
 [[block]]
 block = "cpu"
@@ -20,12 +23,9 @@ interval = 5
 block = "load"
 interval = 5
 format = "$icon $1m.eng(w:4)%"
-
-[[block]]
-block = "sound"
-[[block.click]]
-button = "left"
-cmd = "pavucontrol"
+[block.theme_overrides]
+idle_bg = { link = "info_bg" }
+idle_fg = { link = "info_fg" }
 
 [[block]]
 block = "net"
@@ -49,9 +49,23 @@ missing_format = ""
 [[block]]
 block = "notify"
 format = "$icon"
+[block.theme_overrides]
+idle_bg = { link = "warning_bg" }
+idle_fg = { link = "warning_fg" }
+
+[[block]]
+block = "sound"
+[[block.click]]
+button = "left"
+cmd = "pavucontrol"
+[block.theme_overrides]
+idle_bg = { link = "good_bg" }
+idle_fg = { link = "good_fg" }
 
 [[block]]
 block = "time"
 interval = 5
 format = "$timestamp.datetime(f:'%a %d/%m %R')"
-
+[block.theme_overrides]
+idle_bg = { link = "warning_bg" }
+idle_fg = { link = "warning_fg" }
