enable autolock with dedicated script

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -7,8 +7,8 @@ set $mod Mod4
 # physlock can be installed with apt-get install physlock
 set $Locker physlock
 
-exec swayidle -w \
-    timeout 3600 'physlock'
+# autolock activation and configuration is in .local/bin/enable-autolock
+exec enable-autolock
 
 # Inhibit locking if windows are in fullscreen
 for_window [class=".*"] inhibit_idle fullscreen
