also hide wifi interface if not connected

--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -38,6 +38,7 @@ cmd = "xterm -e nmtui"
 [[block]]
 block = "net"
 device = "wlan.*"
+missing_format = ""
 [[block.click]]
 button = "left"
 cmd = "xterm -e nmtui"
