--- a/.config/sway/config
+++ b/.config/sway/config
@@ -5,7 +5,7 @@ set $mod Mod4
 # set $Locker swaylock -i ~/.wallpaper.png -s fill && sleep 1
 
 # waylock can be installed with cargo install waylock --locked, needs libpam-dev
-set $Locker waylock --init-color 0x002b36 --input-color 0x2aa198
+set $Locker swaylock
 
 # autolock activation and configuration is in .local/bin/enable-autolock
 exec enable-autolock
