show battery percentage also on full battery

--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -45,6 +45,9 @@ cmd = "xterm -e nmtui"
 
 [[block]]
 block = "battery"
+format = "$icon  $percentage"
+full_format = "$icon  $percentage"
+empty_format = "$icon  $percentage"
 missing_format = ""
 
 [[block]]
