--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'jaclu/tmux-menus'
 
 # Configuration
-set -g @themepack 'powerline/block/gray'
+set -g @themepack 'powerline/double/blue'
 
 set -g mouse on
 
