add dragon-drop for drag-and-drop support from ranger

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -760,3 +760,6 @@ copytmap <ESC> q Q w <C-c>
 
 # Fuzzy search
 map <C-p> fzf_select
+
+# drag-and-drop support with dragon in the background
+map <C-d> shell dragon-wrapper %p
