add pyright again

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -47,6 +47,7 @@
     "!Split sequence",
     "!Join sequence"
   ],
+  "pyright.disableDiagnostics": false,
   "diagnostic-languageserver.formatFiletypes": {
     "python": [
       "black"
