--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -763,3 +763,5 @@ map <C-p> fzf_select
 
 # drag-and-drop support with dragon in the background
 map <C-d> shell dragon-wrapper %p
+
+default_linemode devicons
