--- a/.gitconfig
+++ b/.gitconfig
@@ -55,3 +55,7 @@
   path = ~/.gitconfig.local
 [includeIf "gitdir:~/.dotfiles"]
   path = ~/.dotfiles/.gitconfig.github
+[includeIf "gitdir:~/workspace/*"]
+  path = ~/.dotfiles/.gitconfig.github
+[includeIf "gitdir:~/go/*"]
+  path = ~/.dotfiles/.gitconfig.github
