--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -26,6 +26,7 @@ idle_fg = { link = "info_fg" }
 block = "net"
 device = "eth.*"
 missing_format = ""
+inactive_format = ""
 [[block.click]]
 button = "left"
 cmd = "xterm -e nmtui"
@@ -34,6 +35,7 @@ cmd = "xterm -e nmtui"
 block = "net"
 device = "wlan.*"
 missing_format = ""
+inactive_format = ""
 [[block.click]]
 button = "left"
 cmd = "xterm -e nmtui"
