--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,8 +48,8 @@ bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 
-# Copy to x-clipboard
-if-shell "uname | grep -q Darwin" "source-file ~/.dotfiles/tmux-macosx" "source-file ~/.dotfiles/tmux-linux"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
