--- a/tuning/config.toml
+++ b/tuning/config.toml
@@ -1,7 +1,6 @@
 ## Everything in ~/\.config/
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -9,7 +8,6 @@ src = "{{ home_dir }}/.dotfiles/.config/alacritty/alacritty.yml"
 path = "{{ home_dir }}/.config/alacritty/alacritty.yml"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -17,7 +15,6 @@ src = "{{ home_dir }}/.dotfiles/.config/btop/btop.conf"
 path = "{{ home_dir }}/.config/btop/btop.conf"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -25,7 +22,6 @@ src = "{{ home_dir }}/.dotfiles/.config/containers/registries.conf"
 path = "{{ home_dir }}/.config/containers/registries.conf"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -33,8 +29,6 @@ src = "{{ home_dir }}/.dotfiles/.config/ctags/config.conf"
 path = "{{ home_dir }}/.config/ctags/config.conf"
 
 [[jobs]]
-
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -42,7 +36,6 @@ src = "{{ home_dir }}/.dotfiles/.config/dunst/dunstrc"
 path = "{{ home_dir }}/.config/dunst/dunstrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -50,7 +43,6 @@ src = "{{ home_dir }}/.dotfiles/.config/fd/ignore"
 path = "{{ home_dir }}/.config/fd/ignore"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -58,7 +50,6 @@ src = "{{ home_dir }}/.dotfiles/.config/fontconfig/fonts.conf"
 path = "{{ home_dir }}/.config/fontconfig/fonts.conf"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -66,7 +57,6 @@ src = "{{ home_dir }}/.dotfiles/.config/foot/foot.ini"
 path = "{{ home_dir }}/.config/foot/foot.ini"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -74,7 +64,6 @@ src = "{{ home_dir }}/.dotfiles/.config/guix/channels.scm"
 path = "{{ home_dir }}/.config/guix/channels.scm"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -82,7 +71,6 @@ src = "{{ home_dir }}/.dotfiles/.config/i3status-rust/config.toml"
 path = "{{ home_dir }}/.config/i3status-rust/config.toml"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -90,7 +78,6 @@ src = "{{ home_dir }}/.dotfiles/.config/nvim/init.vim"
 path = "{{ home_dir }}/.config/nvim/init.vim"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -98,7 +85,6 @@ src = "{{ home_dir }}/.dotfiles/.config/nvim/coc-settings.json"
 path = "{{ home_dir }}/.config/nvim/coc-settings.json"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -106,7 +92,6 @@ src = "{{ home_dir }}/.dotfiles/.config/ranger/rc.conf"
 path = "{{ home_dir }}/.config/ranger/rc.conf"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -114,15 +99,13 @@ src = "{{ home_dir }}/.dotfiles/.config/ranger/commands.py"
 path = "{{ home_dir }}/.config/ranger/commands.py"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
 src = "{{ home_dir }}/.dotfiles/.config/ranger/plugins/"
-path = "{{ home_dir }}/.config/ranger/plugins/"
+path = "{{ home_dir }}/.config/ranger/plugins"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -130,7 +113,6 @@ src = "{{ home_dir }}/.dotfiles/.config/rofi/config.rasi"
 path = "{{ home_dir }}/.config/rofi/config.rasi"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -138,7 +120,6 @@ src = "{{ home_dir }}/.dotfiles/.config/sway/config"
 path = "{{ home_dir }}/.config/sway/config"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -146,7 +127,6 @@ src = "{{ home_dir }}/.dotfiles/.config/swaylock/config"
 path = "{{ home_dir }}/.config/swaylock/config"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -154,7 +134,6 @@ src = "{{ home_dir }}/.dotfiles/.config/systemd/user/configure-theme.service"
 path = "{{ home_dir }}/.config/systemd/user/configure-theme.service"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -162,7 +141,6 @@ src = "{{ home_dir }}/.dotfiles/.config/systemd/user/dunst.service"
 path = "{{ home_dir }}/.config/systemd/user/dunst.service"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -170,7 +148,6 @@ src = "{{ home_dir }}/.dotfiles/.config/systemd/user/kanshi.service"
 path = "{{ home_dir }}/.config/systemd/user/kanshi.service"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -178,15 +155,13 @@ src = "/dev/null"
 path = "{{ home_dir }}/.config/systemd/user/pipewire-session-manager.service"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
 src = "/dev/null"
-path = "{{ home_dir }}/.config/systemd/user/pulseausio.service.service"
+path = "{{ home_dir }}/.config/systemd/user/pulseaudio.service.service"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -194,15 +169,13 @@ src = "{{ home_dir }}/.dotfiles/.config/systemd/user/sway-session.target"
 path = "{{ home_dir }}/.config/systemd/user/sway-session.target"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
 src = "{{ home_dir }}/.dotfiles/.config/systemd/user/sway-session.target.wants/"
-path = "{{ home_dir }}/.config/systemd/user/sway-session.target.wants/"
+path = "{{ home_dir }}/.config/systemd/user/sway-session.target.wants"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -210,7 +183,6 @@ src = "{{ home_dir }}/.dotfiles/.config/systemd/user/xsettingsd.service"
 path = "{{ home_dir }}/.config/systemd/user/xsettingsd.service"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -218,7 +190,6 @@ src = "{{ home_dir }}/.dotfiles/.config/tmuxinator/lldb.yml"
 path = "{{ home_dir }}/.config/tmuxinator/lldb.yml"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -226,7 +197,6 @@ src = "{{ home_dir }}/.dotfiles/.config/xdg-desktop-portal-wlr/config"
 path = "{{ home_dir }}/.config/xdg-desktop-portal-wlr/config"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -237,7 +207,6 @@ path = "{{ home_dir }}/.config/electron-flags.conf"
 ## Random configuration in ~/\..*/
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -245,7 +214,6 @@ src = "{{ home_dir }}/.dotfiles/.voltron/config"
 path = "{{ home_dir }}/.voltron/config"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -253,7 +221,6 @@ src = "{{ home_dir }}/.dotfiles/.aws/cli/alias"
 path = "{{ home_dir }}/.aws/cli/alias"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -264,7 +231,6 @@ path = "{{ home_dir }}/.gnupg/gpg-agent.conf"
 ## Everything in ~/
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -272,7 +238,6 @@ src = "{{ home_dir }}/.dotfiles/.ackrc"
 path = "{{ home_dir }}/.ackrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -280,7 +245,6 @@ src = "{{ home_dir }}/.dotfiles/.agignore"
 path = "{{ home_dir }}/.agignore"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -288,7 +252,6 @@ src = "{{ home_dir }}/.dotfiles/.bashrc"
 path = "{{ home_dir }}/.bashrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -296,7 +259,6 @@ src = "{{ home_dir }}/.dotfiles/.clang-format"
 path = "{{ home_dir }}/.clang-format"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -304,7 +266,6 @@ src = "{{ home_dir }}/.dotfiles/.gdbinit"
 path = "{{ home_dir }}/.gdbinit"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -312,7 +273,6 @@ src = "{{ home_dir }}/.dotfiles/.gemrc"
 path = "{{ home_dir }}/.gemrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -320,7 +280,6 @@ src = "{{ home_dir }}/.dotfiles/.gitconfig"
 path = "{{ home_dir }}/.gitconfig"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -328,7 +287,6 @@ src = "{{ home_dir }}/.dotfiles/.gitignore_global"
 path = "{{ home_dir }}/.gitignore_global"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -336,7 +294,6 @@ src = "{{ home_dir }}/.dotfiles/.gtkrc-2.0"
 path = "{{ home_dir }}/.gtkrc-2.0"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -344,7 +301,6 @@ src = "{{ home_dir }}/.dotfiles/.java-format.xml"
 path = "{{ home_dir }}/.java-format.xml"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -352,7 +308,6 @@ src = "{{ home_dir }}/.dotfiles/.lldbinit"
 path = "{{ home_dir }}/.lldbinit"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -360,7 +315,6 @@ src = "{{ home_dir }}/.dotfiles/.npmrc"
 path = "{{ home_dir }}/.npmrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -368,7 +322,6 @@ src = "{{ home_dir }}/.dotfiles/.p10k.zsh"
 path = "{{ home_dir }}/.p10k.zsh"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -376,7 +329,6 @@ src = "{{ home_dir }}/.dotfiles/.profile"
 path = "{{ home_dir }}/.profile"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -384,7 +336,6 @@ src = "{{ home_dir }}/.dotfiles/.pylintrc"
 path = "{{ home_dir }}/.pylintrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -392,7 +343,6 @@ src = "{{ home_dir }}/.dotfiles/.ripgreprc"
 path = "{{ home_dir }}/.ripgreprc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -400,7 +350,6 @@ src = "{{ home_dir }}/.dotfiles/.tmux.conf"
 path = "{{ home_dir }}/.tmux.conf"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -408,7 +357,6 @@ src = "{{ home_dir }}/.dotfiles/.vimrc"
 path = "{{ home_dir }}/.vimrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -416,7 +364,6 @@ src = "{{ home_dir }}/.dotfiles/.Xdefaults"
 path = "{{ home_dir }}/.Xdefaults"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -424,7 +371,6 @@ src = "{{ home_dir }}/.dotfiles/.xinitrc"
 path = "{{ home_dir }}/.xinitrc"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -432,7 +378,6 @@ src = "{{ home_dir }}/.dotfiles/.xprofile"
 path = "{{ home_dir }}/.xprofile"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
@@ -440,7 +385,6 @@ src = "{{ home_dir }}/.dotfiles/.xsettingsd"
 path = "{{ home_dir }}/.xsettingsd"
 
 [[jobs]]
-needs = ["dotfiles"]
 type = "file"
 state= "link"
 force = true
