add some more python dependencies

--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -69,8 +69,12 @@ argv = [
   "install",
   "--user",
   "--upgrade",
+  "poetry",
+  "thefuck",
   "pylint",
+  "flake8",
   "pyright",
+  "pynvim",
   "black",
   "jedi-language-server",
   "bandit",
