install aws cli v2

--- a/tuning/programs.toml
+++ b/tuning/programs.toml
@@ -81,3 +81,15 @@ argv = [
   "cfn-lint"
 ]
 
+
+[[jobs]]
+name = "install aws cli v2"
+type = "command"
+command = "bash"
+argv = [
+  "-c",
+  'mkdir -p ~/Downloads/awscli && cd ~/Downloads/awscli && curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install -i ~/.local/aws-cli -b ~/.local/bin --update && cd && rm -rf ~/Downloads/awscli'
+]
+
+
+
